replaced guava ImmutableMap.of() with Map.of()