@@ -1,6 +1,5 @@
 package net.cpollet.gallery.domain.albums;
 
-import com.google.common.collect.ImmutableMap;
 import net.cpollet.gallery.domain.ValidationException;
 
 import java.util.Collections;
@@ -9,7 +8,7 @@ import java.util.Map;
 
 public final class AlbumComparator implements Comparator<Album> {
     private static final String VALIDATION_TARGET = "album/comparator";
-    private static final Map<String, Comparator<Album>> COMPARATORS = ImmutableMap.of(
+    private static final Map<String, Comparator<Album>> COMPARATORS = Map.of(
             "name:asc", Comparator.comparing(Album::name),
             "name:desc", Collections.reverseOrder(Comparator.comparing(Album::name)),
             "id:asc", Comparator.comparing(Album::id),
