@@ -1,8 +1,8 @@
 package net.cpollet.gallery.domain.logins;
 
-import com.google.common.collect.ImmutableMap;
 import net.cpollet.gallery.database.Database;
 
+import java.util.Map;
 import java.util.Optional;
 
 public final class PgLogins implements Logins {
@@ -15,7 +15,7 @@ public final class PgLogins implements Logins {
     @Override
     public Optional<CachedLogin> loadByUsername(Username username) {
         return database.query("SELECT id, username FROM logins WHERE username=:username")
-                .with(ImmutableMap.of(
+                .with(Map.of(
                         "username", username.toString()
                 ))
                 .fetch((rs, rowNum) -> new CachedLogin(
